--- a/views/text.erb
+++ b/views/text.erb
@@ -2,5 +2,6 @@
 <ol>
   <% @text.sentences do |sentence|%>
   <li><a href="<%= url "/sentence/#{sentence.id}/edit" %>"><%= sentence.japanese %></a></li>
-  <li><%= sentence.translation %></li>
+  <li><%= sentence.german %></li>
+  <% end %>
 </ol>
