--- a/views/user_workspace.erb
+++ b/views/user_workspace.erb
@@ -12,7 +12,7 @@
 <form method="post" action="<%= url "/text/new"%>" accept-charset="utf-8">
 
 <label>Titel</label><br />
-<input type="text" /><br />
+<input type="text" name="text_titel" id="text_titel" /><br />
 <label>Text</label><br />
 <textarea name="new_text" id="new_text" cols="80" rows="7"></textarea>
 <br />
